test/fail_compilation/objc/objc_interface2.d

extern (Objective-C)
interface A {
	void test(int a, int b, int c) [test:]; // non-matching number of colon
}
